# myrt

./: CMakeLists.txt  README.md
src/: data_types.h  integrators.cu  intergrators.h  main.cpp  scene.h  sceneParser.cpp  sceneParser.h  spectrum.cpp  spectrum.h
src/util/: logging.cpp  logging.h  programArgs.cpp  programArgs.h  statusCode.h
test/: CMakeLists.txt  spectrum.cpp
test/src/: spectrum.cpp
